python/test-data/testTypesHigherOrderFuns.err
Traceback (most recent call last):
  File "test-data/testTypesHigherOrderFuns.py", line 10, in <module>
    map(["hello", "1"], lambda x: x)
  File "test-data/testTypesHigherOrderFuns.py", line 6, in map
    res.append(fun(x))
WyppTypeError: got value of wrong type
given:    'hello'
expected: value of type int

context: map(container: Iterable[str], fun: Callable[[str], int]) -> list[int]
                                                            ^^^
declared at: test-data/testTypesHigherOrderFuns.py:3
caused by: test-data/testTypesHigherOrderFuns.py:10
  | map(["hello", "1"], lambda x: x)
